# spccore

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
spccore/: __init__.py  baseclient.py  connection.py  constants.py  download.py  exceptions.py  multipart_upload.py  utils.py
spccore/internal/: cache.py  dozer.py  fileutils.py  lock.py  pathutils.py  pool_provider.py  timeutils.py
src/spccore/: __init__.py  client.py  constants.py  exceptions.py
src/spccore/models/: base_model.py  roles.py
src/spccore/services/: teams.py
tests/: conftest.py
tests/integration/: conftest.py  test_baseclient.py  test_connection.py  test_multipart_upload.py  utils.py
tests/integration/internal/: conftest.py  test_cache.py  test_fileutils.py  test_lock.py
tests/unit/: mock_test_utils.py  mock_utils.py  test_baseclient.py  test_client.py  test_connection.py  test_exceptions.py  test_multipart_upload.py  test_utils.py
tests/unit/internal/: test_cache.py  test_dozer.py  test_fileutils.py  test_lock.py  test_pathutils.py  test_pool_provider.py  test_timeutils.py
